We don't need any native code; clean up error...
... handling a little, so it gives at least some info.